--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@
 03HTML_CSS_JAVASCRIPT/HTML_CSS실습1_웹사이트만들기/img/news2.jpg
 03HTML_CSS_JAVASCRIPT/HTML_CSS실습1_웹사이트만들기/img/news1.jpg
 03HTML_CSS_JAVASCRIPT/HTML_CSS실습1_웹사이트만들기/img/brand4.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/alexandre-trouve-Via0Hy2rYIc-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/ann-danilina-VYNBNs_wKO4-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/ann-danilina-Y2JQGXUM1iU-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/jet-dela-cruz-AOI_fg7A28w-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/ming-han-low-xjAxyiqDqu0-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/luminos-film-wcXBNPID69k-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/pan-zhen-Hvjx3cywvM4-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/ping-onganankun-5htrsUUbFGI-unsplash.jpg
+03HTML_CSS_JAVASCRIPT/exp/img/zequn-gui-IlZy859SWN8-unsplash.jpg
