--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 03HTML_CSS_JAVASCRIPT/exp/img/pan-zhen-Hvjx3cywvM4-unsplash.jpg
 03HTML_CSS_JAVASCRIPT/exp/img/ping-onganankun-5htrsUUbFGI-unsplash.jpg
 03HTML_CSS_JAVASCRIPT/exp/img/zequn-gui-IlZy859SWN8-unsplash.jpg
+04Python/chicken.csv
+04Python/서울특별시_관광지입장정보_2011_2016.json
+04Python/전국치킨집리스트.json
+04Python/com_kbstar_kbbank.json
